examples/scanner/literals/fail/invalid_symbol.axo
const left = 10
const right = 20
const bad = left § right
